# grokforge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
experiments/exp001_sft_baseline/: config.yaml  notes.md
experiments/exp002_grpo_apache/: config.yaml  notes.md
notebooks/: sft_colab.ipynb
scripts/: download_data.sh  eval.py  eval_api.py  metrics.py  push_dataset.py  push_eval_results.py  split_data.py
src/dataset/: build.py  generate.py  parse_patterns.py
src/grokforge/dataset/: generate.py  parse_patterns.py
src/grokforge/train/: grpo.py
src/reward/: grok_match.py
src/train/: sft.py
