[project]
name = "grokforge"
version = "0.1.0"
description = "Train LLMs to learn grok pattern generation from log samples"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "trl>=0.8.6",
    "pygrok>=1.0.0",
    "faker>=24.0.0",
    "pyyaml>=6.0",
    "torch>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grokforge"]
